Partially implemented a console. Tab displays the input field and text is parsed as lua statements. However Gosu::TextInput seems to be broken :(

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,11 +6,13 @@ dejavu_SOURCES = \
 	game.cpp  \
 	hero.cpp \
 	luavm.cpp \
-	main.cpp 
+	main.cpp \
+	textfield.cpp
 
 noinst_HEADERS = \
 	animation.h \
 	common.h \
 	game.h \
 	hero.h \
-	luavm.h 
+	luavm.h  \
+	textfield.h
